# kiosker

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.agents/ai_guidelines/: kiosker_implementation_guidelines.md  kiosker_qa_guidelines.md  kiosker_ux_guidelines.md
.github/workflows/: build.yml
library_example/: kiosker_backup.sqlite
src/: App.tsx  index.css  main.tsx  translations.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/documents/: problems_list.md  tests_list.md
src-tauri/icons/: icon.icns
src-tauri/src/: browser_profile.rs  db.rs  lib.rs  main.rs  processes.rs  scraper.rs  scraper.test.rs  system_apps.rs  system_status.rs
src/components/: AddEntryForm.tsx  BrowserPicker.tsx  MediaCard.tsx  RightClickIcon.tsx  Sidebar.tsx  SystemAppPicker.tsx  Toolbar.tsx  VirtualKeyboard.test.tsx  VirtualKeyboard.tsx
src/hooks/: useSpatialNavigation.ts  useTranslation.tsx
src/lib/: mockData.ts
src/pages/: HomeGrid.tsx  Settings.tsx
src/test/: AddEntryForm.test.tsx  BrowserPicker.test.tsx  BugsFix.test.tsx  Fixes.test.tsx  HomeGrid.test.tsx  MediaCard.test.tsx  Settings.test.tsx  SystemAppPicker.test.tsx  Toolbar.test.tsx  renderWithProviders.tsx  setup.ts  translations.test.ts  useSpatialNavigation.test.ts
