[package]
name = "tauri-appkiosker"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appkiosker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.12.0", features = ["blocking", "json"] }
scraper = "0.19.0"
tauri-plugin-autostart = "2.0.0"
tokio = { version = "1.0", features = ["full"] }
gilrs = "0.10.9"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2.0.0"
base64 = "0.22.1"
rdev = "0.5.3"
image = { version = "0.25.9", features = ["ico", "png"] }
sysinfo = "0.33"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "winuser", "libloaderapi", "combaseapi", "objbase", "shobjidl", "shobjidl_core", "wingdi", "windef"] }

[dev-dependencies]
tempfile = "3.10"
